force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/SSP_ProgramPermissionMapping__mdt.object-meta.xml
<CustomObject>
    <description>This Meta data is used to set the program and its permission mapping</description>
    <label>SSP_ProgramPermissionMapping</label>
    <pluralLabel>SSP_ProgramPermissionMappings</pluralLabel>
</CustomObject>