force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/ApplyReportChangeRecertify__c.field-meta.xml
<CustomField>
    <fullName>ApplyReportChangeRecertify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Apply, Report Changes, Recertify Pemission</description>
    <inlineHelpText>Contains Apply, Report Changes, Recertify Permission</inlineHelpText>
    <label>Apply,ReportChange,Recertify</label>
    <type>Checkbox</type>
</CustomField>