force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/ApplyReportChangeRecertifyChecksToClient__c.field-meta.xml
<CustomField>
    <fullName>ApplyReportChangeRecertifyChecksToClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Apply, Report Changes, Recertify, and receive checks made out to client Permission</description>
    <inlineHelpText>Contains Apply, Report Changes, Recertify, and receive checks made out to client Permission</inlineHelpText>
    <label>Apply,ReprtChnge,Recertif,ChecksToClient</label>
    <type>Checkbox</type>
</CustomField>