force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/ApplyReportChangeRecertifyCopyNotice__c.field-meta.xml
<CustomField>
    <fullName>ApplyReportChangeRecertifyCopyNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Apply, Report Changes, Recertify, and receive copy of Notices Permission</description>
    <inlineHelpText>Contains Apply, Report Changes, Recertify, and receive copy of Notices Permission</inlineHelpText>
    <label>Apply,ReportChange,Recertify,CopyNotice</label>
    <type>Checkbox</type>
</CustomField>