force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/ApplyReportChangeRecertifyEBTCard__c.field-meta.xml
<CustomField>
    <fullName>ApplyReportChangeRecertifyEBTCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Apply, Report Changes, Recertify, and use EBT Card Permission</description>
    <inlineHelpText>Contains Apply, Report Changes, Recertify, and use EBT Card Permission</inlineHelpText>
    <label>Apply,ReportChange,Recertify,EBT Card</label>
    <type>Checkbox</type>
</CustomField>