force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/ApplyReportChangeRecertifyReceiveChecks__c.field-meta.xml
<CustomField>
    <fullName>ApplyReportChangeRecertifyReceiveChecks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Apply, Report Changes, Recertify, and receive checks Permission</description>
    <inlineHelpText>Contains Apply, Report Changes, Recertify, and receive checks Permission</inlineHelpText>
    <label>Apply,ReprtChange,Recertif,ReceiveChecks</label>
    <type>Checkbox</type>
</CustomField>