force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Use the set the Ordering of Programs.</description>
    <inlineHelpText>Use the set the Ordering of Programs.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>