force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Contains program</description>
    <inlineHelpText>Contains program</inlineHelpText>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MA</fullName>
                <default>true</default>
                <label>Medicaid/KCHIP</label>
            </value>
            <value>
                <fullName>KT</fullName>
                <label>KTAP (Cash Assistance)</label>
            </value>
            <value>
                <fullName>SN</fullName>
                <label>SNAP (Food Assistance)</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>State Supplementation</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>DSNAP</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Child Care Assistance</label>
            </value>
            <value>
                <fullName>KP</fullName>
                <label>KI-HIPP (Health Insurance Premium Payments)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>