force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Contains different Roles</description>
    <inlineHelpText>Contains different Roles</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Auth_Rep</fullName>
                
                    <default>true</default>
                
                    <label>Auth Rep</label>
                
                </value>
            
                <value>
                
                    <fullName>Assister</fullName>
                
                
                    <label>Assister</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>