force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/StatutoryBenefitPayee__c.field-meta.xml
<CustomField>
    <fullName>StatutoryBenefitPayee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Statutory Benefit Payee Permission</description>
    <inlineHelpText>Contains Statutory Benefit Payee Permission</inlineHelpText>
    <label>Statutory Benefit Payee</label>
    <type>Checkbox</type>
</CustomField>