force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/fields/UseEBTCard__c.field-meta.xml
<CustomField>
    <fullName>UseEBTCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contains Use EBT Card Permission</description>
    <inlineHelpText>Contains Use EBT Card Permission</inlineHelpText>
    <label>Use EBT Card</label>
    <type>Checkbox</type>
</CustomField>