force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/listViews/Assister.listView-meta.xml
<ListView>
    <fullName>Assister</fullName>
    <columns>MasterLabel</columns>
    <columns>Program__c</columns>
    <columns>Role__c</columns>
    <columns>ApplyReportChangeRecertify__c</columns>
    <columns>ApplyReportChangeRecertifyCopyNotice__c</columns>
    <columns>ApplyReportChangeRecertifyEBTCard__c</columns>
    <columns>ApplyReportChangeRecertifyReceiveChecks__c</columns>
    <columns>ApplyReportChangeRecertifyChecksToClient__c</columns>
    <columns>StatutoryBenefitPayee__c</columns>
    <columns>UseEBTCard__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Assister</value>
    </filters>
    <label>Assister</label>
    <language>en_US</language>
</ListView>