force-app/main/default/objects/SSP_ProgramPermissionMapping__mdt/listViews/Auth_Resp.listView-meta.xml
<ListView>
    <fullName>Auth_Resp</fullName>
    <columns>MasterLabel</columns>
    <columns>Program__c</columns>
    <columns>Role__c</columns>
    <columns>ApplyReportChangeRecertify__c</columns>
    <columns>ApplyReportChangeRecertifyCopyNotice__c</columns>
    <columns>ApplyReportChangeRecertifyEBTCard__c</columns>
    <columns>ApplyReportChangeRecertifyChecksToClient__c</columns>
    <columns>UseEBTCard__c</columns>
    <columns>ApplyReportChangeRecertifyReceiveChecks__c</columns>
    <columns>StatutoryBenefitPayee__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>Role__c</field>
        
            <operation>equals</operation>
        
            <value>Auth_Rep</value>
        
        </filters>
    <label>Auth Resp</label>
    <language>en_US</language>
</ListView>